<?xml version="1.0"?>
<package format="2">
  <name>pypcl_ros</name>
  <version>0.0.0</version>
  <description>point clouds</description>

  <maintainer email="dimatura@cmu.edu">Daniel Maturana</maintainer>

  <license>Copyright Carnegie Mellon University 2015</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!--<buildtool_depend>catkin_simple</buildtool_depend>-->

  <depend>cmake_modules</depend>
  <depend>image_geometry</depend>
  <depend>pyrosmsg</depend>
  <depend>pybind11_catkin</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>visualization_msgs</depend>

</package>
